--- a/client/config.ini
+++ b/client/config.ini
@@ -1,16 +1,18 @@
 [SERVER]
 # external requests
 base_url = http://127.0.0.1:2000/
-post_processing_request = /processing_request
+post_processing_request = /post_processing_request
 get_request_status = /request_status
 get_ocr_systems = /ocr_systems
 get_download_results = /download_results
 post_cancel_request = /cancel_request
 # internal requests
-get_processing_request = /processing_request
+get_processing_request = /get_processing_request
 post_upload_results = /upload_results
 
 
 [SETTINGS]
 #login =
 #password =
+command = post_processing_request
+file = C:/Users/LachubCz_NTB/Documents/GitHub/PERO-API/client/example_processing_request.json
