--- a/client/config.ini
+++ b/client/config.ini
@@ -12,7 +12,6 @@ post_upload_results = /upload_results
 
 
 [SETTINGS]
-#login =
-#password =
+api_key = 81UrQXInhWuLqrxEKvl0l7dGPv8E48QbgZdCOVMVbM4
 command = post_processing_request
 file = C:/Users/LachubCz_NTB/Documents/GitHub/PERO-API/client/example_processing_request.json
