Models are now on the server side, ALTO contains information about engines, download per page.

--- a/processing_client/config.ini
+++ b/processing_client/config.ini
@@ -2,9 +2,10 @@
 base_url = http://127.0.0.1:2000/
 get_processing_request = /get_processing_request
 post_upload_results = /upload_results
+get_download_engine = /download_engine
 
 
 [SETTINGS]
 api_key = test_user
 preferred_engine = 1
-engines_declaration = C:/Users/LachubCz_NTB/Documents/GitHub/PERO-API/processing_client/engines.json
+engines_path = C:/Users/LachubCz_NTB/Documents/GitHub/PERO-API/engines/
