Added support of different fail states.

--- a/processing_client/config.ini
+++ b/processing_client/config.ini
@@ -3,6 +3,7 @@ base_url = http://127.0.0.1:2000/
 get_processing_request = /get_processing_request
 post_upload_results = /upload_results
 get_download_engine = /download_engine
+post_failed_processing = /failed_processing
 
 
 [SETTINGS]
