--- a/processing_client/config-example.ini
+++ b/processing_client/config-example.ini
@@ -4,6 +4,7 @@ get_processing_request = /get_processing_request
 post_upload_results = /upload_results
 get_download_engine = /download_engine
 post_failed_processing = /failed_processing
+get_page_statistics = /page_statistics
 
 
 [SETTINGS]
